hopefully fixed picture

--- a/README.Rmd
+++ b/README.Rmd
@@ -69,9 +69,9 @@ browseVignettes("clustsimlR") # load vignettes
 
 6. ***plot_GMM_clusters*** for plotting a t-SNE of the data, coloured by cluster membership
 
-7. ***calculate_dist*** for computing the distance between two covariance matrices, using the metric described by Förstner & Moonen, (2003). 
+7. ***calculate_dist*** for computing the distance between two covariance matrices, using the metric described by Förstner & Moonen, (2003)
 
-8.***intercluster_dist*** for computing a distance matrix based on inter-distances between within-cluster covariance matrices from GMM analysis, with functionality to plot a heatmap of the distance matrix.
+8. ***intercluster_dist*** for computing a distance matrix based on inter-distances between within-cluster covariance matrices from GMM analysis, with functionality to plot a heatmap of the distance matrix.
 
 The package also includes one sample dataset, called "dasatinib".
 
