--- a/README.Rmd
+++ b/README.Rmd
@@ -77,7 +77,7 @@ The package also includes one sample dataset, called "dasatinib".
 
 For more information, please refer to the vignette and the help documentation available. An overview of the package is also illustrated in the image below:
 
-![](~./inst/extdata/clustsimlR_overview.png)
+![](./inst/extdata/clustsimlR_overview.png)
 
 ## Contributions:
 
