--- a/vignettes/Introduction_clustsimlR.Rmd
+++ b/vignettes/Introduction_clustsimlR.Rmd
@@ -51,7 +51,6 @@ To list all functions available in the package:
 ls("package:clustsimlR")
 ```
 
-
 ## Tutorial
 
 In this section, we will look at a sample workflow using `clustsimlR`, step-by-step.
@@ -232,72 +231,87 @@ We see a more interesting display. For example, it appears that cluster 4 and 7 
 
 ## Summary: Assumptions for this package
 
--The data has undergone at least some of the preprocessing steps appropriate for the kind of data, especially if they are unique to the type of data.
+- The data has undergone at least some of the preprocessing steps appropriate for the kind of data, especially if they are unique to the type of data.
 
--The data has been formatted such that rows represent individual cells, and columns represent features e.g. proteins or genes.
+- The data has been formatted such that rows represent individual cells, and columns represent features e.g. proteins or genes.
 
--The data (before or after transformations and processing) can be modelled by some finite number of Gaussian distributions.
+- The data (before or after transformations and processing) can be modelled by some finite number of Gaussian distributions.
+
+## B-side: Shiny app!
+
+Some users might prefer a GUI-based approach to using the package. `clustsimlR` offers a Shiny app that allows users to explore the functionality of the package in an interactive way. To launch the app, you can run the following command:
+
+```{r, eval=FALSE}
+run_clustsimlR()
+```
+
+Note that the app offers limited functionality in terms of customisation of your analysis. However, it offers a simple and straightforward experience, especially to users who may be less familiar with R programming. 
 
 ## Referencing this package
 
 Please use the following citation to reference this package.
 
- 
--Liawas, L. (2025) clustsimlR: Compute a Covariance-based Inter-cluster Similarity Metric. Unpublished. https://github.com/laaeett/clustsimlR
+  
+- Liawas, L. (2025) clustsimlR: Compute a Covariance-based Inter-cluster Similarity Metric. Unpublished. https://github.com/laaeett/clustsimlR
   
 
 ## References
 
 ### Literature references
  
--Biernacki, C., Celeux, G., & Govaert, G. (2000). Assessing a mixture model for clustering with the integrated completed likelihood. \emph{IEEE Transactions on Pattern Analysis and Machine Intelligence}, 22(7), 719–725. https://doi.org/10.1109/34.865189
+- Biernacki, C., Celeux, G., & Govaert, G. (2000). Assessing a mixture model for clustering with the integrated completed likelihood. \emph{IEEE Transactions on Pattern Analysis and Machine Intelligence}, 22(7), 719–725. https://doi.org/10.1109/34.865189
 
 - Central Limit Theorem. (2008). In The Concise Encyclopedia of Statistics (pp. 66–68). Springer New York. https://doi.org/10.1007/978-0-387-32833-1_50
 
--Fraley, C., & Raftery, A. E. (2002). Model-based clustering, discriminant analysis and density estimation. \emph{Journal of the American Statistical Association}, 97(458), 611-631.
+- Fraley, C., & Raftery, A. E. (2002). Model-based clustering, discriminant analysis and density estimation. \emph{Journal of the American Statistical Association}, 97(458), 611-631.
 
--Fraley, C., & Raftery, A. E. (2007). Bayesian regularization for normal mixture estimation and model-based clustering. \emph{Journal of Classification}, 24(2), 155-181.
+- Fraley, C., & Raftery, A. E. (2007). Bayesian regularization for normal mixture estimation and model-based clustering. \emph{Journal of Classification}, 24(2), 155-181.
 
--Förstner, W., & Moonen, B. (2003). A Metric for Covariance Matrices. In Geodesy-The Challenge of the 3rd Millennium (pp. 299–309). Springer Berlin Heidelberg. https://doi.org/10.1007/978-3-662-05296-9_31
+- Förstner, W., & Moonen, B. (2003). A Metric for Covariance Matrices. In Geodesy-The Challenge of the 3rd Millennium (pp. 299–309). Springer Berlin Heidelberg. https://doi.org/10.1007/978-3-662-05296-9_31
 
--Jolliffe, I. T. (2002). \emph{Principal Component Analysis}, 2nd Edition, New York: Springer.
+- Jolliffe, I. T. (2002). \emph{Principal Component Analysis}, 2nd Edition, New York: Springer.
 
--Koleti, A., Terryn, R., Stathias, V., Chung, C., Cooper, D. J., Turner, J. P., Vidović, D., Forlin, M., Kelley, T. T., D’Urso, A., Allen, B. K., Torre, D., Jagodnik, K. M., Wang, L., Jenkins, S. L., Mader, C., Niu, W., Fazel, M., Mahi, N., … Schürer, S. C. (2018). Data Portal for the Library of Integrated Network-based Cellular Signatures (LINCS) program: integrated access to diverse large-scale cellular perturbation response data. \emph{Nucleic Acids Research}, 46(D1), D558–D566. https://doi.org/10.1093/nar/gkx1063
+- Koleti, A., Terryn, R., Stathias, V., Chung, C., Cooper, D. J., Turner, J. P., Vidović, D., Forlin, M., Kelley, T. T., D’Urso, A., Allen, B. K., Torre, D., Jagodnik, K. M., Wang, L., Jenkins, S. L., Mader, C., Niu, W., Fazel, M., Mahi, N., … Schürer, S. C. (2018). Data Portal for the Library of Integrated Network-based Cellular Signatures (LINCS) program: integrated access to diverse large-scale cellular perturbation response data. \emph{Nucleic Acids Research}, 46(D1), D558–D566. https://doi.org/10.1093/nar/gkx1063
 
--Kantarjian, H., Jabbour, E., Grimley, J., & Kirkpatrick, P. (2006). Dasatinib. \emph{Nature Reviews Drug Discovery}, 5(9), 717–718. https://doi.org/10.1038/nrd2135
+- Kantarjian, H., Jabbour, E., Grimley, J., & Kirkpatrick, P. (2006). Dasatinib. \emph{Nature Reviews Drug Discovery}, 5(9), 717–718. https://doi.org/10.1038/nrd2135
  
--L.J.P. van der Maaten. Accelerating t-SNE using Tree-Based Algorithms. Journal of Machine Learning Research 15(Oct):3221-3245, 2014.
+- L.J.P. van der Maaten. Accelerating t-SNE using Tree-Based Algorithms. Journal of Machine Learning Research 15(Oct):3221-3245, 2014.
   
--Lin, J.-R., Fallahi-Sichani, M., & Sorger, P. K. (2015). Highly multiplexed imaging of single cells using a high-throughput cyclic immunofluorescence method. \emph{Nature Communications}, 6(1), 8390. https://doi.org/10.1038/ncomms9390
+- Lin, J.-R., Fallahi-Sichani, M., & Sorger, P. K. (2015). Highly multiplexed imaging of single cells using a high-throughput cyclic immunofluorescence method. \emph{Nature Communications}, 6(1), 8390. https://doi.org/10.1038/ncomms9390
 
--Upton, G., & Cook, I. (2014). Scree plot. In \emph{A Dictionary of Statistics (3rd ed.)}. Oxford University Press.
+- Upton, G., & Cook, I. (2014). Scree plot. In \emph{A Dictionary of Statistics (3rd ed.)}. Oxford University Press.
 
--van der Maaten, L.J.P. & Hinton, G.E., (2008). Visualizing data using t-SNE. \emph{Journal of Machine Learning Research}, 9(86), 2579-2605.
+- van der Maaten, L.J.P. & Hinton, G.E., (2008). Visualizing data using t-SNE. \emph{Journal of Machine Learning Research}, 9(86), 2579-2605.
   
 
 ### References for packages used for `clustsimlR` development:
 
 Citations generated by `citation("package_name")`:
+
+- Attali, D., Sali, A. (2024). _shinycssloaders: Add Loading Animations to a 'shiny' Output While It's Recalculating_. doi:10.32614/CRAN.package.shinycssloaders <https://doi.org/10.32614/CRAN.package.shinycssloaders>, R package version 1.1.0, <https://CRAN.R-project.org/package=shinycssloaders>.
  
--Bache S, Wickham H (2025). _magrittr: A Forward-Pipe Operator for R_. doi:10.32614/CRAN.package.magrittr <https://doi.org/10.32614/CRAN.package.magrittr>, R package version 2.0.4, <https://CRAN.R-project.org/package=magrittr>.
+- Bache S, Wickham H (2025). _magrittr: A Forward-Pipe Operator for R_. doi:10.32614/CRAN.package.magrittr <https://doi.org/10.32614/CRAN.package.magrittr>, R package version 2.0.4, <https://CRAN.R-project.org/package=magrittr>.
 
--Bates D, Maechler M, Jagan M (2025). _Matrix: Sparse and Dense Matrix Classes and Methods_. doi:10.32614/CRAN.package.Matrix <https://doi.org/10.32614/CRAN.package.Matrix>, R package version 1.7-3, <https://CRAN.R-project.org/package=Matrix>.
+- Bates D, Maechler M, Jagan M (2025). _Matrix: Sparse and Dense Matrix Classes and Methods_. doi:10.32614/CRAN.package.Matrix <https://doi.org/10.32614/CRAN.package.Matrix>, R package version 1.7-3, <https://CRAN.R-project.org/package=Matrix>.
 
--H. Wickham. ggplot2: Elegant Graphics for Data Analysis. Springer-Verlag New York, 2016.
+- Chang, W., Cheng, J., Allaire, J., Sievert, C., Schloerke, B., Xie, Y.,Allen, J., McPherson, J., Dipert, A., Borges, B. (2025). _shiny: Web Application Framework for R_. doi:10.32614/CRAN.package.shiny <https://doi.org/10.32614/CRAN.package.shiny>, R package version 1.11.1, <https://CRAN.R-project.org/package=shiny>.
 
--Wickham H, François R, Henry L, Müller K, Vaughan D (2023). _dplyr: A Grammar of Data Manipulation_. doi:10.32614/CRAN.package.dplyr <https://doi.org/10.32614/CRAN.package.dplyr>, R package version 1.1.4, <https://CRAN.R-project.org/package=dplyr>.
+- H. Wickham. ggplot2: Elegant Graphics for Data Analysis. Springer-Verlag New York, 2016.
 
--Harrell Jr F (2025). _Hmisc: Harrell Miscellaneous_. doi:10.32614/CRAN.package.Hmisc <https://doi.org/10.32614/CRAN.package.Hmisc>, R package version 5.2-4, <https://CRAN.R-project.org/package=Hmisc>.
+- Wickham H, François R, Henry L, Müller K, Vaughan D (2023). _dplyr: A Grammar of Data Manipulation_. doi:10.32614/CRAN.package.dplyr <https://doi.org/10.32614/CRAN.package.dplyr>, R package version 1.1.4, <https://CRAN.R-project.org/package=dplyr>.
 
--Jesse H. Krijthe (2015). Rtsne: T-Distributed Stochastic Neighbor Embedding using a Barnes-Hut Implementation, URL: https://github.com/jkrijthe/Rtsne
+- Harrell Jr F (2025). _Hmisc: Harrell Miscellaneous_. doi:10.32614/CRAN.package.Hmisc <https://doi.org/10.32614/CRAN.package.Hmisc>, R package version 5.2-4, <https://CRAN.R-project.org/package=Hmisc>.
 
--Kolde R (2025). _pheatmap: Pretty Heatmaps_. doi:10.32614/CRAN.package.pheatmap <https://doi.org/10.32614/CRAN.package.pheatmap>, R package version 1.0.13, <https://CRAN.R-project.org/package=pheatmap>.
+- Jesse H. Krijthe (2015). Rtsne: T-Distributed Stochastic Neighbor Embedding using a Barnes-Hut Implementation, URL: https://github.com/jkrijthe/Rtsne
 
--Maechler M, Dutang C, Goulet V (2024). _expm: Matrix Exponential, Log, 'etc'_. doi:10.32614/CRAN.package.expm <https://doi.org/10.32614/CRAN.package.expm>, R package version 1.0-0, <https://CRAN.R-project.org/package=expm>.
+- Kolde R (2025). _pheatmap: Pretty Heatmaps_. doi:10.32614/CRAN.package.pheatmap <https://doi.org/10.32614/CRAN.package.pheatmap>, R package version 1.0.13, <https://CRAN.R-project.org/package=pheatmap>.
 
--Scrucca L, Fraley C, Murphy TB, Raftery AE (2023). _Model-Based Clustering, Classification, and Density Estimation Using mclust in R_. Chapman and Hall/CRC. ISBN 978-1032234953, doi:10.1201/9781003277965 <https://doi.org/10.1201/9781003277965>, <https://mclust-org.github.io/book/>.
+- Maechler M, Dutang C, Goulet V (2024). _expm: Matrix Exponential, Log, 'etc'_. doi:10.32614/CRAN.package.expm <https://doi.org/10.32614/CRAN.package.expm>, R package version 1.0-0, <https://CRAN.R-project.org/package=expm>.
+
+- Scrucca L, Fraley C, Murphy TB, Raftery AE (2023). _Model-Based Clustering, Classification, and Density Estimation Using mclust in R_. Chapman and Hall/CRC. ISBN 978-1032234953, doi:10.1201/9781003277965 <https://doi.org/10.1201/9781003277965>, <https://mclust-org.github.io/book/>.
+
+- Sievert, C., Cheng, J., Aden-Buie, G. (2025). _bslib: Custom 'Bootstrap' 'Sass' Themes for 'shiny' and 'rmarkdown'_. doi:10.32614/CRAN.package.bslib <https://doi.org/10.32614/CRAN.package.bslib>, R package version 0.9.0, <https://CRAN.R-project.org/package=bslib>.
   
-
 
 ## R session info
 
